[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
regex = "1.10.2"

[build-dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
color-eyre = "0.6.2"
fs-err = "2.11.0"
